4.0.2 (2018-08-24)
------------------

New features
 - [web] move mailboxes (#644, #3511, #4479)

Enhancements
 - [web] prohibit duplicate calendar categories in Preferences module
 - [web] added Romanian (ro) translation - thanks to Vasile Razvan Luca
 - [web] add security flags to cookies (HttpOnly, secure) (#4525)
 - [web] better theming for better customization (#4500)
 - [web] updated Angular to version 1.7.3
 - [web] updated ui-router to version 1.0.20
 - [core] enable Oracle OCI support for CentOS/RHEL v7

Bug fixes
 - [core] handle multi-valued mozillasecondemail attribute mapping
 - [core] avoid displaying empty signed emails when using GNU TLS (#4433)
 - [web] improve popup window detection in message viewer (#4518)
 - [web] enable save button when editing the members of a list
 - [web] restore caret position when replying or forwarding a message (#4517)
 - [web] localized special mailboxes names in filter editor
 - [web] fixed saving task with reminder based on due date

4.0.1 (2018-07-10)
------------------

Enhancements
 - [web] now possible to show events/task for the current year
 - [web] show current ordering setting in lists
 - [web] remove invalid occurrences when modifying a recurrent event
 - [web] updated Angular to version 1.7.2
 - [web] updated Angular Material to version 1.1.10
 - [web] updated CKEditor to version 4.10.0
 - [web] allow mail flag addition/edition on mobile
 - [web] added Japanese (jp) translation - thanks to Ryo Yamamoto

Bug fixes
 - [core] properly update the last-modified attribute (#4313)
 - [core] fixed default data value for c_hascertificate (#4442)
 - [core] fixed ACLs restoration with sogo-tool in single store mode (#4385)
 - [core] fixed S/MIME code with chained certificates
 - [web] prevent deletion of special folders using del key
 - [web] fixed SAML2 session timeout handling during XHR requests
 - [web] fixed renaming a folder under iOS
 - [web] fixed download of exported folders under iOS