@@ -77,7 +77,7 @@
           <var:if condition="canSubscribeUsers">
             <md-checkbox ng-model="user.isSubscribed"
                          label:arial-label="Subscribe User"
-                         ng-disabled="user.wasSubscribed"
+                         ng-disabled="user.wasSubscribed || acl.hasNoRight(user)"
                          ng-true-value="1"
                          ng-false-value="0"
                          ng-hide="user.$isSpecial()">
